...
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="mpR-ep-1Cg">
                                <rect key="frame" x="16" y="144" width="351" height="32"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="31" id="7mt-Q0-E8s"/>
                                </constraints>
                                <segments>
                                    <segment title="Default"/>
                                    <segment title="Custom"/>
                                </segments>
                                <connections>
                                    <action selector="switchConditions:" destination="BYZ-38-t0r" eventType="valueChanged" id="okn-CQ-xWF"/>
                                </connections>
                            </segmentedControl>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text to Ignore" textAlignment="natural" minimumFontSize="17" background="Text to ignore" translatesAutoresizingMaskIntoConstraints="NO" id="Mkt-NU-VmJ" userLabel="IgnoreTextField">
...
